--- a/src/component/compoStyle/PostArea.css
+++ b/src/component/compoStyle/PostArea.css
@@ -215,6 +215,7 @@ Button>img {
     border-radius: 50%;
     pointer-events: none;
     cursor: pointer;
+    object-fit: cover;
 }
 
 .rightDetail {
